favicon added, config for glynn

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,6 +16,8 @@
   </title>
   <meta name="viewport" content="width=device-width, initial-scale=1">  
 
+  <link rel="shortcut icon" href="/media/favicon.ico" />
+
   <!-- Custom CSS -->
   <link rel="stylesheet" href="/css/main.css">
 
