--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -16,6 +16,8 @@
 {% endif %}
 
 <a href="{{ item.url }}">
-	<span class="menuItem symbol big left">{{ item.text }}</span>
+	<span class="menuItem left">
+		<span class="symbol big normal">{{ item.text }}</span>
+	</span>	
 </a>
 {% endfor %}
