--- a/_includes/articleList.html
+++ b/_includes/articleList.html
@@ -5,7 +5,7 @@
 
 {% if include.type == "archive" %}
 
-<ul>
+<ul class="noBullet">
 {% assign oldYear = "" %}
 {% for post in site.categories[locale] %}
 
@@ -17,7 +17,7 @@
 
 {% assign year = post.date | date: '%Y' %}
 {% if year != oldYear %}
-{% unless forloop.first %}</ul>{% endunless %}<li><em>{{ year }}</em><ul>
+{% unless forloop.first %}</ul>{% endunless %}<li><em>{{ year }}</em><ul class="noBullet">
 {% endif %}
 <li>
 	<div class="articleList">	
