--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -8,11 +8,11 @@ layout: default
 {% endunless %}
 
 {% if locale == "de" %}
-	{% assign date = page.date | date: '%d.%m.%Y' %}
-	{% assign subdir = "" %}
+{% assign date = page.date | date: '%d.%m.%Y' %}
+{% assign subdir = "" %}
 {% else %}
-	{% assign date = page.date | date: '%d/%m/%Y' %}
-	{% capture subdir %}/{{ locale }}{% endcapture %}
+{% assign date = page.date | date: '%d/%m/%Y' %}
+{% capture subdir %}/{{ locale }}{% endcapture %}
 {% endif %}
 
 <article>
@@ -33,3 +33,20 @@ layout: default
 		{{ content }}		
 	</span>
 </article>
+
+<div id="disqus_thread"></div>
+<script type="text/javascript">
+	/* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
+    var disqus_shortname = 'michaelschaeferorg'; // required: replace example with your forum shortname
+    var disqus_identifier = '{{ page.url }}';
+    var disqus_title = '{{ page.title }}';
+
+    /* * * DON'T EDIT BELOW THIS LINE * * */
+    (function() {
+    	var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
+    	dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
+    	(document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+    })();
+</script>
+<noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+<a href="http://disqus.com" class="dsq-brlink">comments powered by <span class="logo-disqus">Disqus</span></a>
