layout simplification, new footer, content gets dark when side menu opens

--- a/_includes/articleList.html
+++ b/_includes/articleList.html
@@ -22,7 +22,7 @@
 <li>
 	<div class="articleList">	
 		<span class="left">{{ date }}:</span>
-		<span class="headline">
+		<span class="headline narrow">
 			<a href="{{ post.url }}">{{ post.title }}</a>    
 		</span> 
 	</div>
