--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,13 +1,13 @@
 <span class="dummy">
   <span class="wrapper">
     <span class="content left">      
-      <img src="/media/photo/01.png" />
+      <img src="/media/photo/01.jpg" />
     </span>
     <span class="content middle">      
-      <img src="/media/photo/02.png" />
+      <img src="/media/photo/02.jpg" />
     </span>
     <span class="content right">      
-      <img src="/media/photo/03.png" />
+      <img src="/media/photo/03.jpg" />
     </span>
   </span>						
 </span>
