--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -3,8 +3,8 @@
 {% assign locale = site.default_locale %}
 {% endunless %}
 
-<label for="menuTrigger">
-  <span id="menuButton" class="menuItem symbol left">&#xf419;</span>
+<label for="menuTrigger" title="{{ site.data.i18n[locale].menuTooltip }}">
+  <span id="menuButton" class="menuItem symbol left">&#xf419;</span>  
 </label>
 
 {% for item in site.data.i18n[locale].navigation %}
@@ -15,9 +15,9 @@
 <input type="radio" name="navigation" id="entry{{ forloop.index }}" />
 {% endif %}
 
-<a href="{{ item.url }}">
+<a href="{{ item.url }}" title="{{ item.tooltip }}">
 	<span class="menuItem left">
 		<span class="symbol big normal">{{ item.text }}</span>
-	</span>	
+	</span>		
 </a>
 {% endfor %}
