--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -19,15 +19,9 @@ layout: default
 	<h1>{{ page.title }}</h1>
 	<span class="meta">
 		<div>
-			<span class="symbol">&#xf307;</span><span class="date"> {{ date }}</span>
-		</div>
-		<span class="symbol">&#xf302;</span>
-		<ul>
-			{% for tag in page.tags %}
-			<li><a href="{{ subdir }}/tags/#{{ tag | cgi_escape }}">{{ tag }}</a></li>
-			{% endfor %}
-		</ul>
-	</span>
+			<span class="symbol">&#xf307;</span><span class="date">{{ date }}</span>
+		</div>		
+		<span class="symbol">&#xf302;</span>{% capture tagList %}{% for tag in page.tags %}, <a href="{{ subdir }}/tags/#{{ tag | cgi_escape }}">{{ tag }}</a>{% endfor %}{% endcapture %}{{ tagList | remove_first: ', ' }}</span>
 
 	<span class="content">
 		{{ content }}		
@@ -36,12 +30,10 @@ layout: default
 
 <div id="disqus_thread"></div>
 <script type="text/javascript">
-	/* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
     var disqus_shortname = 'michaelschaeferorg'; // required: replace example with your forum shortname
     var disqus_identifier = '{{ page.url }}';
     var disqus_title = '{{ page.title }}';
 
-    /* * * DON'T EDIT BELOW THIS LINE * * */
     (function() {
     	var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
     	dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
