--- a/css/main.scss
+++ b/css/main.scss
@@ -317,6 +317,31 @@ nav {
 	styling
 */
 
+.album {
+    a {    
+        border: none;
+        position: relative;
+        margin-right: 2em;
+        margin-bottom: 2em;
+        float: left;
+        opacity: 0.75;
+        top: 0;
+
+        @include vendor(transition, all 0.5s ease-in-out);
+    } 
+
+    a:hover {
+        top: -1em;
+        opacity: 1;
+    }   
+
+    &:after {
+        clear: both;
+        content: "";
+        display: block;        
+    }
+}
+
 article {
     margin-bottom: 2em;
 
