--- a/css/main.css
+++ b/css/main.css
@@ -228,8 +228,6 @@ ul {
   margin-left: 1.5em; }
   ul li li {
     margin-left: 1em; }
-    ul li li:last-child {
-      margin-bottom: 1em; }
 
 /*
 	basic layout
@@ -239,7 +237,7 @@ aside {
   left: -500px;
   overflow-y: auto;
   padding: 1em;
-  position: absolute;
+  position: fixed;
   top: 5em;
   width: 500px;
   z-index: 1;
@@ -254,7 +252,8 @@ body, html {
 
 body {
   background-color: black;
-  overflow-y: scroll; }
+  overflow-y: scroll;
+  position: relative; }
 
 #center {
   display: block;
@@ -268,24 +267,21 @@ body {
   position: relative;
   z-index: 0; }
 
+footer {
+  margin: 0 auto;
+  max-width: 480px;
+  min-width: 200px;
+  padding-bottom: 1.5rem;
+  padding-top: 1.5rem;
+  width: 50%; }
+
 nav {
   display: block;
-  position: absolute;
+  position: fixed;
   height: 3em;
   width: 100%;
   z-index: 2;
   top: 0; }
-
-footer {
-  border-top: 1px solid black;
-  width: 50%;
-  text-align: center;
-  padding-bottom: 2em;
-  padding-top: 0.5em;
-  margin: 0 auto;
-  font-size: 0.75em;
-  max-width: 480px;
-  min-width: 200px; }
 
 main {
   display: block;
@@ -300,10 +296,6 @@ main {
 #menuTrigger:checked ~ aside {
   left: 0; }
 
-/*#menuTrigger:checked ~ #container #center,
-#menuTrigger:checked ~ #container header { 
-    opacity: 0.1; 
-}*/
 #menuTrigger:checked ~ #container {
   opacity: 0.25; }
 
@@ -385,6 +377,11 @@ aside {
   -o-transition: opacity 1s ease-in-out;
   -webkit-transition: opacity 1s ease-in-out;
   transition: opacity 1s ease-in-out; }
+
+footer {
+  border-top: 1px solid black;
+  text-align: center;
+  font-size: 0.8333em; }
 
 header {
   background-color: #d6dbd6;
@@ -498,7 +495,7 @@ nav {
     width: 95%;
     left: -500px; }
 
-  #container, nav, main {
+  body, #container, nav, main {
     min-width: 320px; }
 
   header .dummy {
@@ -507,3 +504,6 @@ nav {
 
   main {
     width: 100%; } }
+@media (max-width: 350px) {
+  aside, nav {
+    position: absolute; } }
