--- a/css/main.scss
+++ b/css/main.scss
@@ -211,8 +211,6 @@ ul {
     margin-left: 1.5em;
     li li {
         margin-left: 1em;
-
-        &:last-child { margin-bottom: 1em; }
     }
 }
 
@@ -226,7 +224,7 @@ aside {
     left: -500px;        
     overflow-y: auto;
     padding: 1em;    
-    position: absolute;    
+    position: fixed;    
     top: 5em;    
     width: 500px;
     z-index: 1;
@@ -237,9 +235,10 @@ body, html {
 	height: 100%;	
 }
 
-body {
+body {    
     background-color: black;
-    overflow-y: scroll;
+    overflow-y: scroll;    
+    position: relative;
 }
 
 #center {	
@@ -256,33 +255,30 @@ body {
     z-index: 0;    
 }
 
+footer {        
+    margin: 0 auto;        
+    max-width: 480px;
+    min-width: 200px;
+    padding-bottom: 1.5rem;
+    padding-top: 1.5rem;    
+    width: 50%;    
+}
+
 nav {	
     display: block;    
-    position: absolute;
+    position: fixed;
     height: 3em;        
     width: 100%;
     z-index: 2;
     top: 0;
 }
 
-footer {
-    border-top: 1px solid black;
-    width: 50%;
-    text-align: center;
-    padding-bottom: 2em;
-    padding-top: 0.5em;
-    margin: 0 auto;    
-    font-size: 0.75em;
-    max-width: 480px;
-    min-width: 200px;
-}
-
-main {	
+main {
 	display: block;	
     margin: 0 auto;
     max-width: 960px;
     padding: 2em;
-    width: 960px; 
+    width: 960px;
 }
 
 
@@ -292,10 +288,6 @@ main {
 
 #menuTrigger:checked ~ aside { left: 0; }
 
-/*#menuTrigger:checked ~ #container #center,
-#menuTrigger:checked ~ #container header { 
-    opacity: 0.1; 
-}*/
 #menuTrigger:checked ~ #container {
     opacity: 0.25;
 }
@@ -390,6 +382,12 @@ aside {
     line-height: 1.5em;
     @include vendor(transition, opacity $menuSlideDuration ease-in-out);
     
+}
+
+footer {
+    border-top: 1px solid black;
+    text-align: center;
+    font-size: 0.8333em;
 }
 
 header {   
@@ -528,15 +526,15 @@ nav {
 */
 
 @media (max-width: 1024px) {
-    aside {
+    aside {        
         max-width: 500px;        
         width: 95%;
         left: -500px;
     }
 
-    #container, nav, main {
+    body, #container, nav, main {
         min-width: 320px;
-    }    
+    }
 
     header {
         .dummy {
@@ -548,5 +546,9 @@ nav {
     main {        
         width: 100%;   
     }
+}
+
+@media (max-width: 350px) {
+    aside, nav { position: absolute; }
 }
 
