--- a/css/main.scss
+++ b/css/main.scss
@@ -219,12 +219,13 @@ ul {
 	basic layout
 */
 
-aside {    	
+aside {
+    bottom: 0;
     display: block;    
     left: -500px;        
     overflow-y: auto;
     padding: 1em;    
-    position: fixed;    
+    position: fixed;        
     top: 5em;    
     width: 500px;
     z-index: 1;
