starting implementation of a compress plugin with smart indentation

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -30,7 +30,7 @@ layout: default
 
 <div id="disqus_thread"></div>
 <script type="text/javascript">
-    var disqus_shortname = 'michaelschaeferorg'; // required: replace example with your forum shortname
+    var disqus_shortname = 'michaelschaeferorg';
     var disqus_identifier = '{{ page.url }}';
     var disqus_title = '{{ page.title }}';
 
